--- a/fig.css
+++ b/fig.css
@@ -1,4 +1,11 @@
-html {
-    background-attachment: fixed;
-    background-color: greenyellow
+h1 {
+  font-size: 60px;
+  text-align: center;
+}
+
+p, li {
+  font-size: 16px;
+  /* line-height 后而可以跟不同的参数，如果是数字，就是当前字体大小乘上数字 */    
+  line-height: 2;
+  letter-spacing: 1px;
 }
