--- a/fig.css
+++ b/fig.css
@@ -3,8 +3,8 @@ h1 {
   text-align: center;
    margin: 0;
   padding: 20px 0;    
-  color: #00539F;
-  text-shadow: 3px 3px 1px black;
+  color: blue;
+
 }
 
 p, li {
