--- a/fig.css
+++ b/fig.css
@@ -1,3 +1,17 @@
+html {
+  font-size: 10px;
+  font-family: 'Noto Sans SC', sans-serif;
+  background-color: #00539F;
+}
+
+body {
+  width: 600px;
+  margin: 0 auto;
+  background-color: #FF9500;
+  padding: 0 20px 20px 20px;
+  border: 5px solid black;
+}
+
 h1 {
   font-size: 60px;
   text-align: center;
@@ -15,5 +29,5 @@ p, li,u1 {
 img {
   display: block;
   margin: 0 auto;
-  width: 400px
+  width: 500px
 }
