--- a/fig.css
+++ b/fig.css
@@ -5,11 +5,11 @@ html {
 }
 
 body {
-  width: 800px;
+  width: 1000px;
   margin: 0 auto;
-  background-color: #FF9500;
+  background-color: gray;
   padding: 0 20px 20px 20px;
-  border: 5px solid black;
+  border: 1px solid black;
 }
 
 h1 {
