--- a/fig.css
+++ b/fig.css
@@ -4,7 +4,7 @@ html {
   background-color: gray;
 }
 body {
- width: 1000px;
+ width: 75%;
   margin: 0 auto;
   background-color: white;
   padding: 0 20px 20px 20px;
