--- a/fig.css
+++ b/fig.css
@@ -1,11 +1,14 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
 html {
   font-size: 10px;
   font-family: 'Noto Sans SC', sans-serif;
   background-color: gray;
 }
 body {
- width: 75%;
-  margin: 0 auto;
+ width: 80%;
   background-color: white;
   padding: 0 20px 20px 20px;
   border: 1px solid black;
@@ -91,17 +94,6 @@ img {
 main {
   display: flex;
 }
-
-aside {
-  flex: 1;
-  margin-left: 10px;
-  background-color: #66ccff;
-}
-
-aside li {
-  padding-bottom: 10px;
-}
-
 footer {
   margin-top: 10px;
 }
