--- a/fig.css
+++ b/fig.css
@@ -8,7 +8,7 @@ html {
   background-color: gray;
 }
 body {
- width: 80%;
+ width: 900px;
   background-color: white;
   padding: 0 20px 20px 20px;
   border: 1px solid black;
@@ -93,6 +93,15 @@ img {
 
 main {
   display: flex;
+}
+aside {
+  flex: 1;
+  margin-left: 10px;
+  background-color: #66ccff;
+}
+
+aside li {
+  padding-bottom: 10px;
 }
 footer {
   margin-top: 10px;
