--- a/fig.css
+++ b/fig.css
@@ -5,6 +5,7 @@ html {
 }
 body {
  width: 1000px;
+   margin: 0 auto;
   background-color: white;
   padding: 0 20px 20px 20px;
   border: 1px solid black;
