--- a/fig.css
+++ b/fig.css
@@ -1,3 +1,7 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
 html {
   font-size: 10px;
   font-family: 'Noto Sans SC', sans-serif;
@@ -5,10 +9,8 @@ html {
 }
 body {
  width: 1000px;
-   margin: 0 auto;
   background-color: white;
-  padding: 0 20px 20px 20px;
-  border: 1px solid black;
+  margin: 0 auto;
 }
 
 * 标题布局 */
