--- a/fig.css
+++ b/fig.css
@@ -8,13 +8,13 @@ html {
   background-color: gray;
 }
 body {
- width: 1000px;
+ width: 80%;
   background-color: white;
   margin: 0 auto;
 }
 
 * 标题布局 */
-nav, aside, footer {
+nav, p, footer {
   background-color: white;
   padding: 1%;
 }
@@ -81,7 +81,9 @@ p, li {
   line-height: 2;
   letter-spacing: 1px;
 }
-
+p{
+flex: 4;
+}
 img {
   display: block;
   margin: 0 auto;
