--- a/fig.css
+++ b/fig.css
@@ -8,8 +8,8 @@ html {
   background-color: gray;
 }
 body {
- width: 100px;
-  background-color: white;
+ width: 800px;
+  background-color: red;
   margin: 0 auto;
 }
 
