--- a/fig.css
+++ b/fig.css
@@ -19,7 +19,7 @@ nav, article footer {
 
 nav {
   height: 50px;
-  background-color: #66ccff;
+  background-color: black;
   display: flex;
   margin-bottom: 10px;
 }
@@ -71,7 +71,7 @@ h2 {
   text-align: center;
 }
 
-p, li {
+li {
   font-size: 16px;
   /* line-height 后而可以跟不同的参数，如果是数字，就是当前字体大小乘上数字 */    
   line-height: 2;
@@ -83,6 +83,4 @@ img {
   margin: 0 auto;
   width: 500px
 }
-footer {
-  margin-top: 10px;
-}
+
