--- a/fig.css
+++ b/fig.css
@@ -13,7 +13,6 @@ body {
   margin: 0 auto;
 }
 nav, article footer {
-  font-size: 50px;
   background-color: white;
   padding: 1%;
 }
@@ -72,7 +71,7 @@ h2 {
   text-align: center;
 }
 
-li {
+article, li {
   font-size: 16px;
   /* line-height 后而可以跟不同的参数，如果是数字，就是当前字体大小乘上数字 */    
   line-height: 2;
