--- a/fig.css
+++ b/fig.css
@@ -76,7 +76,7 @@ p, li {
   /* line-height 后而可以跟不同的参数，如果是数字，就是当前字体大小乘上数字 */    
   line-height: 2;
   letter-spacing: 1px;
-    padding: 1%;
+  line-height: 1.5;
 }
 
 img {
