--- a/fig.css
+++ b/fig.css
@@ -84,6 +84,7 @@ figure img {
     flex-flow: column;
     padding: 5px;
     max-width: 300px;
+  max-height: 400px;
     margin: auto;  
 }
 figcaption {
