--- a/fig.css
+++ b/fig.css
@@ -50,7 +50,7 @@ nav form {
   display: flex;
   align-items: center;
   height: 100%;
-  padding: 2px;
+  padding: 5px;
 }
 
 nav a:hover {
@@ -60,7 +60,7 @@ nav a:hover {
 }
 article {
   background: #ccc;
-  padding: 50px;
+  padding: 5px;
 }
 article h2 {
   margin-top: 0;
@@ -87,7 +87,7 @@ p, li {
   line-height: 2;
   letter-spacing: 1px;
   line-height: 1.5;
-  padding: 30px;
+  margin: 0 5px 5px 0;
 }
 figure img {
     display: flex;
