--- a/fig.css
+++ b/fig.css
@@ -3,7 +3,7 @@ html, body {
   padding: 0;
 }
 html {
-  font-size: 10px;
+  font-size: 16px;
   font-family: 'Noto Sans SC', sans-serif;
   background-color: black;
 }
@@ -54,7 +54,7 @@ nav form {
 }
 
 nav a:hover {
-  color: rgb(247, 235, 235);
+  color: black;
   text-shadow: 0 0 10px wheat;
   transition-duration: 200ms;
 }
