--- a/fig.css
+++ b/fig.css
@@ -72,6 +72,7 @@ article img {
 }
 article p {
   line-height: 2;
+   font-size: 16px;
 }
 /* 文字排版 */
 h1 {
@@ -101,7 +102,9 @@ figure ul {
   flex: 2;
   display: flex;
 }
-
+p,li {
+   font-size: 16px;
+}
 figure li {
   display: inline;
   text-align: center;
