--- a/fig.css
+++ b/fig.css
@@ -118,6 +118,6 @@ figure li {
   flex: 4;
 }
 footer {
-  margin-top: 10px;
-  background-color:gray;
+  margin-top: 20px;
+  background-color:#ebe8e8;
 }
