--- a/fig.css
+++ b/fig.css
@@ -22,27 +22,6 @@ p,li {
   padding-right: 10px;
   padding-left: 10px;
 }
-nav {
-  height: 40px;
-  background-color:#ebe8e8;
-  display: flex;
-  padding: 1%;
-}
-
-nav ul {
-  padding: 0;
-  list-style-type: none;
-  flex: 2;
-  display: flex;
-}
-
-nav li {
-  display: inline;
-  text-align: center;
-  flex: 1;
-}
-
-
 article {
   background: white;
   padding: 10px;
@@ -97,6 +76,33 @@ figure li {
   display: inline;
   text-align: center;
   flex: 4;
+}
+nav {
+  height: 40px;
+  background-color:#ebe8e8;
+  display: flex;
+  padding: 1%;
+}
+
+nav ul {
+  padding: 0;
+  list-style-type: none;
+  flex: 2;
+  display: flex;
+}
+
+nav li {
+  display: inline;
+  text-align: center;
+  flex: 1;
+}
+nav a {
+  display: inline-block;
+  font-size: 2rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+  transition-duration: 200ms;
 }
 footer {
   margin-top: 20px;
