--- a/fig.css
+++ b/fig.css
@@ -8,7 +8,7 @@ html {
   background-color: black;
 }
 body {
- width: 1200px;
+ width: 1100px;
   background-color: white;
   margin: 0 auto;
   position: relative;
@@ -30,8 +30,13 @@ article {
 article h2 {
   margin-top: 0;
 }
-article img {
+.f1 article img {
   float: left;
+  margin: 0 10px 10px 0;
+  max-width: 100%;
+}
+.f2 article img {
+  float: right;
   margin: 0 10px 10px 0;
   max-width: 100%;
 }
