--- a/fig.css
+++ b/fig.css
@@ -82,6 +82,15 @@ h2 {
   text-align: center;
   flex: 4;
 }
+aside {
+  float: left;
+  height: 40px;
+  background-color:#ebe8e8;
+  display: flex;
+  padding: 1%;
+  flex: 1;
+  margin-right: 10px;
+}
 nav {
   height: 40px;
   background-color:#ebe8e8;
