--- a/fig.css
+++ b/fig.css
@@ -8,7 +8,7 @@ html {
   background-color: black;
 }
 body {
- width: 1100px;
+ width: 80%;
   background-color: white;
   margin: 0 auto;
   position: relative;
