--- a/fig.css
+++ b/fig.css
@@ -5,7 +5,7 @@ html, body {
 html {
   font-size: 10px;
   font-family: 'Noto Sans SC', sans-serif;
-  background-color: black;
+  background-color: white;
 }
 body {
  width: 80%;
@@ -85,7 +85,6 @@ h2 {
 aside {
   float: left;
   background-color:#ebe8e8;
-  display: flex;
   padding: 1%;
   flex: 1;
   margin-right: 10px;
