--- a/fig.css
+++ b/fig.css
@@ -85,6 +85,7 @@ aside {
   background-color:#ebe8e8;
   flex: 1;
   margin-left: 10px;
+  margin-bottom: 30px;
 }
 aside li {
   padding-bottom: 10px;
