--- a/fig.css
+++ b/fig.css
@@ -8,7 +8,7 @@ html {
   background-color: white;
 }
 body {
- width: 70%;
+ width: 80%;
   background-color: white;
   margin: 0 auto;
 }
@@ -18,8 +18,6 @@ header {
 p,li {
    font-size: 16px;
   line-height: 2;
-    padding-right: 10px;
-  padding-left: 10px;
 }
 article {
   background: white;
@@ -43,7 +41,7 @@ article p {
   line-height: 2;
    font-size: 16px;
 }
-nav, article, aside, footer {
+nav, article, footer {
   background-color: white;
   padding: 1%;
 }
@@ -86,9 +84,13 @@ h2 {
   flex: 4;
 }
 aside {
-  margin-left:10px;
+   padding: 1%;
   background-color:#ebe8e8;
   flex: 1;
+  margin-left:10px;
+  float: left;
+    width: 200px;
+    height: 4000px;
 }
 aside li {
   padding-bottom: 10px;
