--- a/fig.css
+++ b/fig.css
@@ -86,7 +86,7 @@ h2 {
 aside {
   background-color:white;
   flex: 1;
-  margin-left:-30px;
+ margin-right: 20px;
   float: left;
     width: 200px;
     height: 400px;
