--- a/fig.css
+++ b/fig.css
@@ -18,6 +18,7 @@ header {
 p,li {
    font-size: 16px;
   line-height: 2;
+  padding-left: 100px;
 }
 article {
   background: white;
@@ -86,9 +87,9 @@ h2 {
 aside {
   background-color:white;
   flex: 1;
- margin-right: 20px;
+ margin-right: 10px;
   float: left;
-    width: 200px;
+    width: 180px;
     height: 400px;
 }
 aside li {
