--- a/fig.css
+++ b/fig.css
@@ -18,7 +18,7 @@ header {
 p,li {
    font-size: 16px;
   line-height: 2;
-  padding-left: 100px;
+  margin-left: 100px;
 }
 article {
   background: white;
