--- a/fig.css
+++ b/fig.css
@@ -85,9 +85,9 @@ h2 {
   flex: 4;
 }
 aside {
-  background-color:black;
+  background-color:white;
   flex: 1;
- margin-right: 5px;
+ margin-right: 0px;
  float: left;
     width: 150px;
     height: 400px;
