--- a/fig.css
+++ b/fig.css
@@ -42,7 +42,7 @@ article p {
   line-height: 2;
    font-size: 16px;
 }
-.nav, article, footer {
+nav, article, footer {
   background-color: white;
   padding: 1%;
 }
@@ -94,26 +94,26 @@ aside {
 aside li {
   padding-bottom: 10px;
 }
-.nav {
+nav {
   height: 40px;
   background-color:#ebe8e8;
   display: flex;
   padding: 1%;
 }
 
-.nav ul {
+nav ul {
   padding: 0;
   list-style-type: none;
   flex: 2;
   display: flex;
 }
 
-.nav li {
+nav li {
   display: inline;
   text-align: center;
   flex: 1;
 }
-.nav a {
+nav a {
   display: inline-block;
   font-size: 2rem;
   text-transform: uppercase;
