--- a/fig.css
+++ b/fig.css
@@ -31,7 +31,6 @@ article h2 {
 }
 .e1 img,.n2 img {
   float: left;
-  margin: 0 10px 10px 0;
   max-width: 100%;
 }
 .n1 img {
@@ -49,7 +48,7 @@ h1 {
   text-align: center;
   color: black;
 }
-h2 {
+h2,h3 {
   font-size: 30px;
   text-align: center;
 }
@@ -115,16 +114,9 @@ nav a {
   font-size: 2rem;
   text-transform: uppercase;
   text-decoration: none;
-  color: red;
+  color: black;
   transition-duration: 200ms;
 }
-.info-box li a:focus, .info-box li a:hover {
-    background-color: white;
-  }
- .info-box {
-    width: 80%;
-    height: 2200px;
-  }
   .info-box .panels {
     clear: both;
     position: relative;
@@ -132,16 +124,13 @@ nav a {
   }
   .info-box div {
      background-color: white;
-    color: blak;
+    color: black;
     position: absolute;
     height: 2200px;
     top: 0;
     left: 0;
   }
 
-  .info-box .active-panel {
-    z-index: 1;
-  }
 
 footer {
   margin-top: 20px;
