--- a/fig.css
+++ b/fig.css
@@ -1,12 +1,17 @@
-html, body {
-  margin: 0;
-  padding: 0;
-}
 html {
+    font-family: sans-serif;
   font-size: 10px;
   font-family: 'Noto Sans SC', sans-serif;
-  background-color: white;
-}
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+
+  body {
+    margin: 0;
+  }
+
 body {
  width: 90%;
   background-color: white;
@@ -21,8 +26,8 @@ p,li {
 }
 article {
   background: white;
-  padding: 5px;
-   margin-left: 150px;
+  padding: 10px 10px;
+   margin-left: 130px;
    border-bottom: 3px solid #375e97;
 }
 article h2 {
@@ -52,7 +57,7 @@ h2,h3 {
   text-align: center;
 }
 .m2 figure{
-      padding: 15px;
+      padding: 10px 10px;
       margin: auto;
 }
  figure img {
@@ -64,7 +69,7 @@ h2,h3 {
  figcaption {
     background-color: white;
     color: black;
-    padding: 15px;
+    padding: 10px 10px;
     text-align: center;
 }
  figure ul {
@@ -83,7 +88,7 @@ aside {
   flex: 1;
  margin-right: 0px;
  float: left;
-    width: 150px;
+    width: 130px;
     height: 400px;
 }
 aside li {
@@ -91,7 +96,7 @@ aside li {
 }
 /* info-box setup */
 .info-box {
-    width: 80%;
+    width: 1200px;
     height: 2500px;
     margin: 10px auto 0;
   }
@@ -102,6 +107,7 @@ nav {
   background-color:#ebe8e8;
   display: flex;
   padding: 1%;
+  font-size: 16px;
 }
 
 nav ul {
