--- a/fig.css
+++ b/fig.css
@@ -31,17 +31,13 @@ article {
    margin-left: 130px;
    border-bottom: 3px solid #375e97;
 }
-article h2 {
-  margin-top: 0;
-}
+
 .e1 img,.n2 img {
   float: left;
-  max-width: 100%;
     padding: 10px 10px;
 }
 .n1 img {
   float: right;
-  max-width: 100%;
 }
  article {
   background-color: white;
@@ -103,34 +99,43 @@ aside li {
   }
 
   /* styling nav */
-nav {
-  height: 50px;
-  background-color:#ebe8e8;
-  display: flex;
-  font-size: 16px;
-}
-
 nav ul {
     border: 1px solid #ebe8e8;
     overflow: hidden;
     height: 50px;
     margin: 0;
     padding: 0;
+     flex: 2;
+  display: flex;
   }
 
 nav li {
-  float: left;
+  display: inline;
+  text-align: center;
     list-style-type: none;
-    width: 150px;
+    width: 300px;
 }
-nav li a {
+nav a {
+  font-size: 2rem;   
   display: inline-block;
     text-decoration: none;
     width: 100%;
     line-height: 50px;
     background: #ebe8e8;
     color: black;
-    text-align: center;
+}
+nav form {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  padding: 0 2em;
+}
+
+nav a:hover {
+  color: white;
+  text-shadow: 0 0 10px wheat;
+  transition-duration: 200ms;
 }
  .info-box li a:focus, .info-box li a:hover {
     background-color: #ebe8e8;
