--- a/fig.css
+++ b/fig.css
@@ -17,6 +17,12 @@ body {
   background-color: white;
   margin: 0 auto;
 }
+/* info-box setup */
+.info-box {
+    width: 1100px;
+    height: 3000px;
+    margin: 10px auto 0;
+  }
 header {
   height: 80px;
 }
@@ -27,8 +33,8 @@ p,li {
 }
 article {
   background: white;
-  padding: 10px 10px;
    margin-left: 130px;
+    padding: 10px 10px;
    border-bottom: 3px solid #375e97;
 }
 
@@ -39,10 +45,7 @@ article {
 .n1 img {
   float: right;
 }
- article {
-  background-color: white;
-  padding: 10px 10px;
-}
+
 /* 文字排版 */
 h1 {
   font-size: 50px;
@@ -91,13 +94,6 @@ aside {
 aside li {
   padding-bottom: 10px;
 }
-/* info-box setup */
-.info-box {
-    width: 1100px;
-    height: 3000px;
-    margin: 10px auto 0;
-  }
-
   /* styling nav */
 nav ul {
     border: 1px solid #ebe8e8;
@@ -150,7 +146,7 @@ nav a:hover {
 .info-box .panels {
     clear: both;
     position: relative;
-    height: 2500px;
+    height: 3000px;
   }
   .info-box div {
      background-color: white;
@@ -167,6 +163,8 @@ nav a:hover {
 
 /-----/
 footer {
-  margin-top: 30px;
+    text-align: left;
+    font-size: 16px;
+  margin-top: 20px;
   background-color:#ebe8e8;
 }
