--- a/fig.css
+++ b/fig.css
@@ -13,10 +13,64 @@ html {
   }
 
 body {
- width: 90%;
+ width: 80%;
   background-color: white;
   margin: 0 auto;
 }
+
+ /* styling nav */
+nav {
+  height: 50px;
+  background-color: #ebe8e8;
+  display: flex;
+  margin-bottom: 10px;
+}
+nav ul {
+    border: 1px solid  #ebe8e8;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+     flex: 2;
+  display: flex;
+  }
+
+nav li {
+  display: inline;
+  text-align: center;
+    list-style-type: none;
+    width: 300px;
+}
+nav a {
+  font-size: 2rem;   
+  display: inline-block;
+    text-decoration: none;
+    width: 100%;
+    line-height: 50px;
+    background: #ebe8e8;
+    text-align: center;
+    color: black;
+}
+nav form {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  padding: 0 2em;
+}
+
+nav a:hover {
+  color: #ebe8e8;
+  text-shadow: 0 0 10px wheat;
+  transition-duration: 200ms;
+}
+ .info-box li a:focus, .info-box li a:hover {
+    background-color: #ebe8e8;
+    color: black;
+  }
+.info-box li a.active {
+    background-color: #ebe8e8;
+    color: black;
+  }
 /* info-box setup */
 .info-box {
     width: 1100px;
@@ -41,54 +95,6 @@ body {
 .info-box .active-panel {
     z-index: 1;
   }
- /* styling nav */
-nav ul {
-    background-color: #ebe8e8;
-    overflow: hidden;
-    height: 50px;
-    margin: 0;
-    padding: 0;
-     flex: 2;
-  display: flex;
-  }
-
-nav li {
-  display: inline;
-  text-align: center;
-    list-style-type: none;
-    width: 300px;
-}
-nav a {
-  font-size: 2rem;   
-  display: inline-block;
-    text-decoration: none;
-    width: 100%;
-    line-height: 50px;
-    background: #ebe8e8;
-    color: black;
-}
-nav form {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  height: 100%;
-  padding: 0 2em;
-}
-
-nav a:hover {
-  color: #ebe8e8;
-  text-shadow: 0 0 10px wheat;
-  transition-duration: 200ms;
-}
- .info-box li a:focus, .info-box li a:hover {
-    background-color: #ebe8e8;
-    color: black;
-  }
-.info-box li a.active {
-    background-color: #ebe8e8;
-    color: black;
-  }
-
 
 
 /* 文字排版 */
