--- a/fig.css
+++ b/fig.css
@@ -17,40 +17,40 @@ body {
   background-color: white;
   margin: 0 auto;
 }
-
+/* info-box setup */
+.info-box {
+    width: 1100px;
+    height: 3000px;
+    margin: 10px auto 0;
+  }
  /* styling nav */
 nav {
   height: 50px;
   background-color: #ebe8e8;
-  display: flex;
   margin-bottom: 10px;
 }
 nav ul {
-    border: 1px solid  #ebe8e8;
     overflow: hidden;
     background-color: #ebe8e8;
     margin: 0;
     padding: 0;
-     flex: 2;
-  display: flex;
   }
 
 nav li {
   display: inline;
-  text-align: center;
     list-style-type: none;
     width: 300px;
 }
 nav a {
   font-size: 2rem;   
   display: inline-block;
-   text-transform: uppercase;
     text-decoration: none;
     width: 100%;
     line-height: 50px;
     background: #ebe8e8;
     text-align: center;
     color: black;
+    font-weight: bold;
 }
 
  .info-box li a:focus, .info-box li a:hover {
@@ -61,12 +61,7 @@ nav a {
     background-color: #ebe8e8;
     color: white;
   }
-/* info-box setup */
-.info-box {
-    width: 1100px;
-    height: 3000px;
-    margin: 10px auto 0;
-  }
+
 /* styling info-box panels */
 .info-box .panels {
     clear: both;
@@ -95,18 +90,15 @@ p,li {
    font-size: 16px;
   line-height: 2;
     margin: 10px auto 0;
-    padding: 10px 0px;
 }
 article {
   background: white;
    margin-left: 150px;
-    padding: 10px 0px;
    border-bottom: 3px solid #375e97;
 }
 
 .e1 img,.n2 img {
   float: left;
-    padding: 10px 0px;
 }
 .n1 img {
   float: right;
@@ -121,7 +113,6 @@ h2,h3 {
   text-align: center;
 }
 .m2 figure{
-      padding: 10px 0px;
       margin: auto;
 }
  figure img {
