--- a/fig.css
+++ b/fig.css
@@ -56,11 +56,11 @@ nav a {
 
  .info-box li a:focus, .info-box li a:hover {
     background-color: #ebe8e8;
-    color: #ebe8e8;
+    color: black;
   }
 .info-box li a.active {
     background-color: #ebe8e8;
-    color: #ebe8e8;
+    color: black;
   }
 
 /* styling info-box panels */
