--- a/fig.css
+++ b/fig.css
@@ -38,7 +38,7 @@ nav ul {
     list-style-type: none;
   }
 
-  nav li a {
+  nav a {
     display: inline-block;
     text-decoration: none;
     width: 50px;
@@ -49,11 +49,11 @@ nav ul {
        font-size: 16px;
     font-weight: bold;
   }
- nav li a:focus, nav li a:hover {
+ nav  a:focus, nav a:hover {
     background-color: #ebe8e8;
     color: #ebe8e8;
   }
-nav li a.active {
+nav a.active {
     background-color: #ebe8e8;
     color: #ebe8e8;
   }
