--- a/fig.css
+++ b/fig.css
@@ -24,40 +24,48 @@ body {
     margin: 10px auto 0;
   }
  /* styling nav */
+nav {
+  height: 50px;
+  background-color: #66ccff;
+  display: flex;
+  margin-bottom: 10px;
+}
+
 nav ul {
-    background: #ebe8e8;
-    border: 1px solid #ebe8e8;
-    overflow: hidden;
-    height: 50px;
-    margin: 0;
-    padding: 0;
-  }
+  padding: 0;
+  list-style-type: none;
+  flex: 2;
+  display: flex;
+}
 
-  nav li {
-    float: left;
-    list-style-type: none;
-  }
+nav li {
+  display: inline;
+  text-align: center;
+  flex: 1;
+}
 
-  nav a {
-    display: inline-block;
-    text-decoration: none;
-    width: 50px;
-    line-height: 50px;
-    background: #ebe8e8;
-    color: #ebe8e8;
-    text-align: center;
-       font-size: 16px;
-    font-weight: bold;
-  }
- nav  a:focus, nav a:hover {
-    background-color: #ebe8e8;
-    color: #ebe8e8;
-  }
-nav a.active {
-    background-color: #ebe8e8;
-    color: #ebe8e8;
-  }
+nav a {
+  display: inline-block;
+  font-size: 2rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+  transition-duration: 200ms;
+}
 
+nav form {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  padding: 0 2em;
+}
+
+nav a:hover {
+  color: white;
+  text-shadow: 0 0 10px wheat;
+  transition-duration: 200ms;
+}
 /* styling info-box panels */
 .info-box .panels {
     clear: both;
