--- a/fig.css
+++ b/fig.css
@@ -15,6 +15,11 @@ p,li {
    font-size: 16px;
   line-height: 2;
 }
+ article {
+  background: white;
+   margin-left: 150px;
+   border-bottom: 3px solid #375e97;
+}
 .e1 img,.n2 img {
   float: left;
 }
@@ -70,9 +75,7 @@ nav {
 }
 
 nav ul {
-  padding: 0;
   list-style-type: none;
-  flex: 2;
   display: flex;
     overflow: hidden;
     height: 50px;
@@ -90,15 +93,33 @@ nav li {
 
 .info-box li a:focus, .info-box li a:hover {
     background-color: #ebe8e8;
-    color: #ebe8e8;
+    color: black;
   }
 
   .info-box li a.active {
     background-color:#ebe8e8;
-    color: #ebe8e8;
+    color: black;
   }
 
+/* styling info-box panels */
+info-box .panels {
+    clear: both;
+    position: relative;
+    height: 2800px;
+  }
 
+  .info-box div {
+    background-color: white;
+    color: black;
+    position: absolute;
+    padding: 10px 10px;
+    height: 2800px;
+    top: 50px;
+    left: 0;
+  }
+
+  .info-box .active-panel {
+    z-index: 1;
 
 aside {
   background-color:white;
