--- a/fig.css
+++ b/fig.css
@@ -67,7 +67,48 @@ h3{
     margin: 15px auto 0;
   }
  /* styling nav */
+nav {
+  height: 50px;
+  background-color: #ebe8e8;
+  display: flex;
+  margin-bottom: 10px;
+}
 
+nav ul {
+  padding: 0;
+  list-style-type: none;
+  flex: 2;
+  display: flex;
+}
+
+nav li {
+  display: inline;
+  text-align: center;
+  flex: 1;
+}
+
+nav a {
+  display: inline-block;
+  font-size: 2rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+  transition-duration: 200ms;
+}
+
+nav form {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  padding: 0 2em;
+}
+
+nav a:hover {
+  color: white;
+  text-shadow: 0 0 10px wheat;
+  transition-duration: 200ms;
+}
 
 aside {
   background-color:white;
