--- a/fig.css
+++ b/fig.css
@@ -41,6 +41,21 @@ h3{
     font-size:20px;
     text-align:left
 }
+ figure img {
+    display: flex;
+   padding:5px;
+    flex-flow: column;  
+}  
+figure ul {
+  list-style-type: none;
+  display: flex;
+}
+ figure li {
+    padding: 5px;
+  display: inline;
+  text-align: center;
+  flex: 4;
+} 
 
  /* info-box setup */
 
