--- a/fig.css
+++ b/fig.css
@@ -16,7 +16,6 @@ header {
 p,li {
    font-size: 16px;
   line-height: 2;
-  padding:5px;
 }
  article {
   background: white;
@@ -25,6 +24,8 @@ p,li {
 }
 .e1 img,.n2 img {
   float: left;
+  margin-right: 30px;
+  padding-right:5px;
 }
 .n1 img {
   float: right;
